# unpin-bot

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: app-build.yml  back-build.yml
migration/: env.py
migration/versions/: 2022_11_26_1502-8f602cc32235_first_migration.py
src/: main.py
src/core/: __init__.py  context.py  logger.py  settings.py
src/model/: __init__.py  pin.py
