[tool.poetry]
name = "unpin-bot"
version = "0.1.0"
description = ""
authors = ["Denis Malin <denis@malina.page>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "^2.0.62"
TgCrypto = "^1.2.5"
uvloop = "^0.17.0"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
gino = "^1.0.1"
alembic = "^1.8.1"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
